--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   "dependencies": {
     "angular": "^1.5.6",
     "angular-animate": "^1.5.6",
+    "angular-chart.js": "^1.0.0-alpha8",
     "angular-moment": "^1.0.0-beta.6",
     "angular-toastr": "^1.7.0",
     "angular-ui-bootstrap": "^1.3.3",
     "angular-ui-router": "^0.3.1",
     "bootstrap": "^3.3.6",
+    "font-awesome": "^4.6.3",
     "moment": "^2.13.0",
     "satellizer": "^0.14.1"
   },
