--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "angular-toastr": "^1.7.0",
     "angular-ui-bootstrap": "^1.3.3",
     "angular-ui-router": "^0.3.1",
+    "angular-validation-match": "^1.9.0",
     "bootstrap": "^3.3.6",
     "font-awesome": "^4.6.3",
     "moment": "^2.13.0",
