--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "bootstrap": "^3.3.6",
     "font-awesome": "^4.6.3",
     "moment": "^2.13.0",
+    "ngmap": "^1.18.0",
     "satellizer": "^0.14.1"
   },
   "devDependencies": {
